# hansa

./: .clang-format  .gitignore  CMakeLists.txt  README.md  kernel.c  main.cpp
data/images/: attribution.txt
kernels/: 001-vector-add.c  002-color-to-grayscale.c  003-image-blur.c  004-matrix-multiply-naive.c  005-matrix-multiply-tiled.c
